--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
     <!-- TEST END -->
 
   </main>
+  
+  <!-- ATTRIBUTION -->
   <footer>
-    <p class="attribution">
+    <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+      Coded by <a href="https://github.com/sithu-thedev">Sithu-thedev</a>.
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
